<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quizpariu</string>
    <string name="action_settings">Settings</string>
    <string name="titulo">QuizPariu!</string>
    <string name="quiz1">Com quantos paus se faz uma canoa?</string>
    <string name="quiz1resp1">Com 1 coqueiro e 2 cocos</string>
    <string name="quiz1resp2">E o bambu?</string>
    <string name="quiz1resp3">Casa de Padeiro, Pão Francês</string>
    <string name="quiz1resp4">Água mole e pedra dura</string>
    <string name="respode">Responde</string>
    <string name="title_activity_quiz2">Quizpariu</string>
    <string name="quiz2">Complete a frase: Coca-cola espumante..</string>
    <string name="quiz2resp1">Tá quente</string>
    <string name="quiz2resp2">Tem gás</string>
    <string name="quiz2resp3">***** de jegue no ** do elefante</string>
    <string name="quiz2resp4">O urubu não tem cabelo..</string>

</resources>
