<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Quiz2Activity" >

    <TextView
        android:id="@+id/titulo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titulo"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/quiz2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quiz2"
        android:textSize="20sp" />


    <RadioGroup
        android:id="@+id/quiz2grupo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/quiz2resp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/quiz2resp1" />

        <RadioButton
            android:id="@+id/quiz2resp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz2resp2" />

        <RadioButton
            android:id="@+id/quiz2resp3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz2resp3" />
        
        <RadioButton
            android:id="@+id/quiz2resp4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz2resp4" />
        
    </RadioGroup>
    
    <Button
        android:id="@+id/quiz2botao1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/respode" />


</LinearLayout>
